--- a/notebooks/00-jupyter_introduction.ipynb
+++ b/notebooks/00-jupyter_introduction.ipynb
@@ -437,9 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199 µs ± 7.1 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "\n",
@@ -450,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,9 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.09 µs ± 7.99 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "\n",
@@ -477,9 +493,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable   Type      Data/Info\n",
+      "------------------------------\n",
+      "np         module    <module 'numpy' from '/op<...>kages/numpy/__init__.py'>\n"
+     ]
+    }
+   ],
    "source": [
     "%whos"
    ]
@@ -493,9 +519,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Available line magics:\n%alias  %alias_magic  %autoawait  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %conda  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %pip  %popd  %pprint  %precision  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n\nAvailable cell magics:\n%%!  %%HTML  %%SVG  %%bash  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n\nAutomagic is ON, % prefix IS NOT needed for line magics.",
+      "application/json": {
+       "line": {
+        "automagic": "AutoMagics",
+        "autocall": "AutoMagics",
+        "alias_magic": "BasicMagics",
+        "lsmagic": "BasicMagics",
+        "magic": "BasicMagics",
+        "page": "BasicMagics",
+        "pprint": "BasicMagics",
+        "colors": "BasicMagics",
+        "xmode": "BasicMagics",
+        "quickref": "BasicMagics",
+        "doctest_mode": "BasicMagics",
+        "gui": "BasicMagics",
+        "precision": "BasicMagics",
+        "notebook": "BasicMagics",
+        "save": "CodeMagics",
+        "pastebin": "CodeMagics",
+        "loadpy": "CodeMagics",
+        "load": "CodeMagics",
+        "edit": "KernelMagics",
+        "config": "ConfigMagics",
+        "prun": "ExecutionMagics",
+        "pdb": "ExecutionMagics",
+        "debug": "ExecutionMagics",
+        "tb": "ExecutionMagics",
+        "run": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "time": "ExecutionMagics",
+        "macro": "ExecutionMagics",
+        "load_ext": "ExtensionMagics",
+        "unload_ext": "ExtensionMagics",
+        "reload_ext": "ExtensionMagics",
+        "history": "HistoryMagics",
+        "recall": "HistoryMagics",
+        "rerun": "HistoryMagics",
+        "logstart": "LoggingMagics",
+        "logstop": "LoggingMagics",
+        "logoff": "LoggingMagics",
+        "logon": "LoggingMagics",
+        "logstate": "LoggingMagics",
+        "pinfo": "NamespaceMagics",
+        "pinfo2": "NamespaceMagics",
+        "pdef": "NamespaceMagics",
+        "pdoc": "NamespaceMagics",
+        "psource": "NamespaceMagics",
+        "pfile": "NamespaceMagics",
+        "psearch": "NamespaceMagics",
+        "who_ls": "NamespaceMagics",
+        "who": "NamespaceMagics",
+        "whos": "NamespaceMagics",
+        "reset": "NamespaceMagics",
+        "reset_selective": "NamespaceMagics",
+        "xdel": "NamespaceMagics",
+        "alias": "OSMagics",
+        "unalias": "OSMagics",
+        "rehashx": "OSMagics",
+        "pwd": "OSMagics",
+        "cd": "OSMagics",
+        "env": "OSMagics",
+        "set_env": "OSMagics",
+        "pushd": "OSMagics",
+        "popd": "OSMagics",
+        "dirs": "OSMagics",
+        "dhist": "OSMagics",
+        "sc": "OSMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "bookmark": "OSMagics",
+        "pycat": "OSMagics",
+        "pip": "PackagingMagics",
+        "conda": "PackagingMagics",
+        "matplotlib": "PylabMagics",
+        "pylab": "PylabMagics",
+        "killbgscripts": "ScriptMagics",
+        "autoawait": "AsyncMagics",
+        "ed": "Other",
+        "hist": "Other",
+        "rep": "Other",
+        "clear": "KernelMagics",
+        "less": "KernelMagics",
+        "more": "KernelMagics",
+        "man": "KernelMagics",
+        "connect_info": "KernelMagics",
+        "qtconsole": "KernelMagics",
+        "autosave": "KernelMagics",
+        "mkdir": "Other",
+        "rmdir": "Other",
+        "mv": "Other",
+        "rm": "Other",
+        "cp": "Other",
+        "cat": "Other",
+        "ls": "Other",
+        "ll": "Other",
+        "lf": "Other",
+        "lk": "Other",
+        "ldir": "Other",
+        "lx": "Other",
+        "store": "StoreMagics"
+       },
+       "cell": {
+        "js": "DisplayMagics",
+        "javascript": "DisplayMagics",
+        "latex": "DisplayMagics",
+        "svg": "DisplayMagics",
+        "html": "DisplayMagics",
+        "markdown": "DisplayMagics",
+        "prun": "ExecutionMagics",
+        "debug": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "time": "ExecutionMagics",
+        "capture": "ExecutionMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "!": "OSMagics",
+        "writefile": "OSMagics",
+        "script": "ScriptMagics",
+        "sh": "Other",
+        "bash": "Other",
+        "perl": "Other",
+        "ruby": "Other",
+        "python": "Other",
+        "python2": "Other",
+        "python3": "Other",
+        "pypy": "Other",
+        "SVG": "Other",
+        "HTML": "Other",
+        "file": "Other"
+       }
+      }
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%lsmagic"
    ]
@@ -509,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,9 +683,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "./\n  visualization_01_matplotlib.ipynb\n  pandas_03b_indexing.ipynb\n  visualization_03_landscape.ipynb\n  case3_bacterial_resistance_lab_experiment.ipynb\n  pandas_06_data_cleaning.ipynb\n  pandas_09_combining_datasets.ipynb\n  pandas_03a_selecting_data.ipynb\n  pandas_08_reshaping_data.ipynb\n  case2_observations.ipynb\n  case2_observations_analysis.ipynb\n  00-jupyter_introduction.ipynb\n  case4_air_quality_processing.ipynb\n  visualization_02_seaborn.ipynb\n  pandas_02_basic_operations.ipynb\n  pandas_01_data_structures.ipynb\n  case1_bike_count.ipynb\n  pandas_07_missing_values.ipynb\n  pandas_05_groupby_operations.ipynb\n  case4_air_quality_analysis.ipynb\n  case2_observations_processing.ipynb\n  pandas_04_time_series_data.ipynb",
+      "text/html": "./<br>\n&nbsp;&nbsp;<a href='./visualization_01_matplotlib.ipynb' target='_blank'>visualization_01_matplotlib.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_03b_indexing.ipynb' target='_blank'>pandas_03b_indexing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./visualization_03_landscape.ipynb' target='_blank'>visualization_03_landscape.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case3_bacterial_resistance_lab_experiment.ipynb' target='_blank'>case3_bacterial_resistance_lab_experiment.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_06_data_cleaning.ipynb' target='_blank'>pandas_06_data_cleaning.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_09_combining_datasets.ipynb' target='_blank'>pandas_09_combining_datasets.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_03a_selecting_data.ipynb' target='_blank'>pandas_03a_selecting_data.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_08_reshaping_data.ipynb' target='_blank'>pandas_08_reshaping_data.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations.ipynb' target='_blank'>case2_observations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations_analysis.ipynb' target='_blank'>case2_observations_analysis.ipynb</a><br>\n&nbsp;&nbsp;<a href='./00-jupyter_introduction.ipynb' target='_blank'>00-jupyter_introduction.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case4_air_quality_processing.ipynb' target='_blank'>case4_air_quality_processing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./visualization_02_seaborn.ipynb' target='_blank'>visualization_02_seaborn.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_02_basic_operations.ipynb' target='_blank'>pandas_02_basic_operations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_01_data_structures.ipynb' target='_blank'>pandas_01_data_structures.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case1_bike_count.ipynb' target='_blank'>case1_bike_count.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_07_missing_values.ipynb' target='_blank'>pandas_07_missing_values.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_05_groupby_operations.ipynb' target='_blank'>pandas_05_groupby_operations.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case4_air_quality_analysis.ipynb' target='_blank'>case4_air_quality_analysis.ipynb</a><br>\n&nbsp;&nbsp;<a href='./case2_observations_processing.ipynb' target='_blank'>case2_observations_processing.ipynb</a><br>\n&nbsp;&nbsp;<a href='./pandas_04_time_series_data.ipynb' target='_blank'>pandas_04_time_series_data.ipynb</a><br>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "FileLinks('.', recursive=False)"
    ]
@@ -531,7 +706,7 @@
    "source": [
     "The follow-up notebooks provide additional background (largely adopted from the [scientific python notes](http://www.scipy-lectures.org/), which you can explore on your own to get more background on the Python syntax if specific elements would not be clear. \n",
     "\n",
-    "For now, we will work on the `python_rehearsal.ipynb` notebook, which is a short summary version of the other notebooks to quickly grasp the main elements"
+    "For now, we will work on the `python_rehearsal.ipynb` notebook, which is a short summary version of the other notebooks to quickly grasp the main elements\n"
    ]
   }
  ],
