--- a/notebooks/case2_observations_analysis.ipynb
+++ b/notebooks/case2_observations_analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,28 +57,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "nbtutor-solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'_solutions/case2_observations_analysis1.py' was not found in history, as a file, url, nor in the user namespace.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3716\u001B[0m, in \u001B[0;36mInteractiveShell.find_user_code\u001B[0;34m(self, target, raw, py_only, skip_encoding_cookie, search_ns)\u001B[0m\n\u001B[1;32m   3715\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:                                              \u001B[38;5;66;03m# User namespace\u001B[39;00m\n\u001B[0;32m-> 3716\u001B[0m     codeobj \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43meval\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mtarget\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43muser_ns\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   3717\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n",
+      "File \u001B[0;32m<string>:1\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name '_solutions' is not defined",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [12]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mget_ipython\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_line_magic\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mload\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m_solutions/case2_observations_analysis1.py\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/interactiveshell.py:2304\u001B[0m, in \u001B[0;36mInteractiveShell.run_line_magic\u001B[0;34m(self, magic_name, line, _stack_depth)\u001B[0m\n\u001B[1;32m   2302\u001B[0m     kwargs[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlocal_ns\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_local_scope(stack_depth)\n\u001B[1;32m   2303\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbuiltin_trap:\n\u001B[0;32m-> 2304\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[43mfn\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   2305\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m result\n",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/magics/code.py:359\u001B[0m, in \u001B[0;36mCodeMagics.load\u001B[0;34m(self, arg_s)\u001B[0m\n\u001B[1;32m    357\u001B[0m opts,args \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparse_options(arg_s,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124myns:r:\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m    358\u001B[0m search_ns \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mn\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01min\u001B[39;00m opts\n\u001B[0;32m--> 359\u001B[0m contents \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshell\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfind_user_code\u001B[49m\u001B[43m(\u001B[49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msearch_ns\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43msearch_ns\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    361\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01min\u001B[39;00m opts:\n\u001B[1;32m    362\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3718\u001B[0m, in \u001B[0;36mInteractiveShell.find_user_code\u001B[0;34m(self, target, raw, py_only, skip_encoding_cookie, search_ns)\u001B[0m\n\u001B[1;32m   3716\u001B[0m     codeobj \u001B[38;5;241m=\u001B[39m \u001B[38;5;28meval\u001B[39m(target, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39muser_ns)\n\u001B[1;32m   3717\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[0;32m-> 3718\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m((\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m was not found in history, as a file, url, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   3719\u001B[0m                         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnor in the user namespace.\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;241m%\u001B[39m target) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01me\u001B[39;00m\n\u001B[1;32m   3721\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(codeobj, \u001B[38;5;28mstr\u001B[39m):\n\u001B[1;32m   3722\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m codeobj\n",
+      "\u001B[0;31mValueError\u001B[0m: '_solutions/case2_observations_analysis1.py' was not found in history, as a file, url, nor in the user namespace."
+     ]
+    }
+   ],
    "source": [
-    "# %load _solutions/case2_observations_analysis1.py"
+    "%load _solutions/case2_observations_analysis1.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "nbtutor-solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'_solutions/case2_observations_analysis2.py' was not found in history, as a file, url, nor in the user namespace.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3716\u001B[0m, in \u001B[0;36mInteractiveShell.find_user_code\u001B[0;34m(self, target, raw, py_only, skip_encoding_cookie, search_ns)\u001B[0m\n\u001B[1;32m   3715\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:                                              \u001B[38;5;66;03m# User namespace\u001B[39;00m\n\u001B[0;32m-> 3716\u001B[0m     codeobj \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43meval\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mtarget\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43muser_ns\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   3717\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n",
+      "File \u001B[0;32m<string>:1\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name '_solutions' is not defined",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [13]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mget_ipython\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_line_magic\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mload\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m_solutions/case2_observations_analysis2.py\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/interactiveshell.py:2304\u001B[0m, in \u001B[0;36mInteractiveShell.run_line_magic\u001B[0;34m(self, magic_name, line, _stack_depth)\u001B[0m\n\u001B[1;32m   2302\u001B[0m     kwargs[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlocal_ns\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_local_scope(stack_depth)\n\u001B[1;32m   2303\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbuiltin_trap:\n\u001B[0;32m-> 2304\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[43mfn\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   2305\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m result\n",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/magics/code.py:359\u001B[0m, in \u001B[0;36mCodeMagics.load\u001B[0;34m(self, arg_s)\u001B[0m\n\u001B[1;32m    357\u001B[0m opts,args \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mparse_options(arg_s,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124myns:r:\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m    358\u001B[0m search_ns \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mn\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01min\u001B[39;00m opts\n\u001B[0;32m--> 359\u001B[0m contents \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshell\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfind_user_code\u001B[49m\u001B[43m(\u001B[49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msearch_ns\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43msearch_ns\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    361\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01min\u001B[39;00m opts:\n\u001B[1;32m    362\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n",
+      "File \u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/DS-python/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3718\u001B[0m, in \u001B[0;36mInteractiveShell.find_user_code\u001B[0;34m(self, target, raw, py_only, skip_encoding_cookie, search_ns)\u001B[0m\n\u001B[1;32m   3716\u001B[0m     codeobj \u001B[38;5;241m=\u001B[39m \u001B[38;5;28meval\u001B[39m(target, \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39muser_ns)\n\u001B[1;32m   3717\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[0;32m-> 3718\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m((\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m was not found in history, as a file, url, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   3719\u001B[0m                         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnor in the user namespace.\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;241m%\u001B[39m target) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01me\u001B[39;00m\n\u001B[1;32m   3721\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(codeobj, \u001B[38;5;28mstr\u001B[39m):\n\u001B[1;32m   3722\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m codeobj\n",
+      "\u001B[0;31mValueError\u001B[0m: '_solutions/case2_observations_analysis2.py' was not found in history, as a file, url, nor in the user namespace."
+     ]
+    }
+   ],
    "source": [
-    "# %load _solutions/case2_observations_analysis2.py"
+    " %load _solutions/case2_observations_analysis2.py"
    ]
   },
   {
@@ -1225,7 +1265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nice work!"
+    "Nice work!\n"
    ]
   }
  ],
