--- a/notebooks/case3_bacterial_resistance_lab_experiment.ipynb
+++ b/notebooks/case3_bacterial_resistance_lab_experiment.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -123,13 +123,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Phage</th>\n",
+       "      <th>Bacterial_genotype</th>\n",
+       "      <th>log10 Mc</th>\n",
+       "      <th>log10 UBc</th>\n",
+       "      <th>log10 LBc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>T7</td>\n",
+       "      <td>RP4</td>\n",
+       "      <td>-6.908090</td>\n",
+       "      <td>-6.766699</td>\n",
+       "      <td>-7.086027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>T7</td>\n",
+       "      <td>RSF1010</td>\n",
+       "      <td>-6.839080</td>\n",
+       "      <td>-6.709209</td>\n",
+       "      <td>-6.999176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>T7</td>\n",
+       "      <td>K43N</td>\n",
+       "      <td>-7.072899</td>\n",
+       "      <td>-6.933264</td>\n",
+       "      <td>-7.248105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>T7</td>\n",
+       "      <td>S512F</td>\n",
+       "      <td>-7.058820</td>\n",
+       "      <td>-6.902430</td>\n",
+       "      <td>-7.261299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>T7</td>\n",
+       "      <td>D516G</td>\n",
+       "      <td>-6.920474</td>\n",
+       "      <td>-6.722230</td>\n",
+       "      <td>-7.199283</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Phage Bacterial_genotype  log10 Mc  log10 UBc  log10 LBc\n",
+       "0    T7                RP4 -6.908090  -6.766699  -7.086027\n",
+       "1    T7            RSF1010 -6.839080  -6.709209  -6.999176\n",
+       "2    T7               K43N -7.072899  -6.933264  -7.248105\n",
+       "3    T7              S512F -7.058820  -6.902430  -7.261299\n",
+       "4    T7              D516G -6.920474  -6.722230  -7.199283"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "falcor = pd.read_excel(\"data/Dryad_Arias_Hall_v3.xlsx\", sheet_name=\"Falcor\",\n",
     "                       skiprows=1)\n",
@@ -167,13 +254,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bacterial_genotype</th>\n",
+       "      <th>Phage_t</th>\n",
+       "      <th>OD_0h</th>\n",
+       "      <th>OD_20h</th>\n",
+       "      <th>OD_72h</th>\n",
+       "      <th>experiment_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>0.1971</td>\n",
+       "      <td>0.5960</td>\n",
+       "      <td>0.6900</td>\n",
+       "      <td>ID_0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>0.1593</td>\n",
+       "      <td>0.5702</td>\n",
+       "      <td>0.6989</td>\n",
+       "      <td>ID_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>0.0926</td>\n",
+       "      <td>0.6613</td>\n",
+       "      <td>0.6474</td>\n",
+       "      <td>ID_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>0.1482</td>\n",
+       "      <td>0.6465</td>\n",
+       "      <td>0.7045</td>\n",
+       "      <td>ID_3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>0.0978</td>\n",
+       "      <td>0.6752</td>\n",
+       "      <td>0.6700</td>\n",
+       "      <td>ID_4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>949</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>0.0417</td>\n",
+       "      <td>0.0402</td>\n",
+       "      <td>0.3179</td>\n",
+       "      <td>ID_949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>950</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>0.0789</td>\n",
+       "      <td>0.0276</td>\n",
+       "      <td>0.3601</td>\n",
+       "      <td>ID_950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>951</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>0.0875</td>\n",
+       "      <td>0.0216</td>\n",
+       "      <td>0.3709</td>\n",
+       "      <td>ID_951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>952</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>0.0755</td>\n",
+       "      <td>0.0418</td>\n",
+       "      <td>0.3628</td>\n",
+       "      <td>ID_952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>953</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>0.0401</td>\n",
+       "      <td>0.0345</td>\n",
+       "      <td>0.3321</td>\n",
+       "      <td>ID_953</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>954 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Bacterial_genotype    Phage_t   OD_0h  OD_20h  OD_72h experiment_ID\n",
+       "0                D516G  C_noPhage  0.1971  0.5960  0.6900          ID_0\n",
+       "1                D516G  C_noPhage  0.1593  0.5702  0.6989          ID_1\n",
+       "2                D516G  C_noPhage  0.0926  0.6613  0.6474          ID_2\n",
+       "3                D516G  C_noPhage  0.1482  0.6465  0.7045          ID_3\n",
+       "4                D516G  C_noPhage  0.0978  0.6752  0.6700          ID_4\n",
+       "..                 ...        ...     ...     ...     ...           ...\n",
+       "949                MUT         T7  0.0417  0.0402  0.3179        ID_949\n",
+       "950                MUT         T7  0.0789  0.0276  0.3601        ID_950\n",
+       "951                MUT         T7  0.0875  0.0216  0.3709        ID_951\n",
+       "952                MUT         T7  0.0755  0.0418  0.3628        ID_952\n",
+       "953                MUT         T7  0.0401  0.0345  0.3321        ID_953\n",
+       "\n",
+       "[954 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "main_experiment[\"experiment_ID\"] = [\"ID_\" + str(idx) for idx in range(len(main_experiment))]\n",
     "main_experiment"
@@ -201,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -210,9 +453,171 @@
      "nbtutor-solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bacterial_genotype</th>\n",
+       "      <th>Phage_t</th>\n",
+       "      <th>experiment_ID</th>\n",
+       "      <th>experiment_time_h</th>\n",
+       "      <th>optical_density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>ID_0</td>\n",
+       "      <td>OD_0h</td>\n",
+       "      <td>0.1971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>ID_1</td>\n",
+       "      <td>OD_0h</td>\n",
+       "      <td>0.1593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>ID_2</td>\n",
+       "      <td>OD_0h</td>\n",
+       "      <td>0.0926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>ID_3</td>\n",
+       "      <td>OD_0h</td>\n",
+       "      <td>0.1482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D516G</td>\n",
+       "      <td>C_noPhage</td>\n",
+       "      <td>ID_4</td>\n",
+       "      <td>OD_0h</td>\n",
+       "      <td>0.0978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2857</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>ID_949</td>\n",
+       "      <td>OD_72h</td>\n",
+       "      <td>0.3179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2858</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>ID_950</td>\n",
+       "      <td>OD_72h</td>\n",
+       "      <td>0.3601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2859</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>ID_951</td>\n",
+       "      <td>OD_72h</td>\n",
+       "      <td>0.3709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2860</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>ID_952</td>\n",
+       "      <td>OD_72h</td>\n",
+       "      <td>0.3628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2861</th>\n",
+       "      <td>MUT</td>\n",
+       "      <td>T7</td>\n",
+       "      <td>ID_953</td>\n",
+       "      <td>OD_72h</td>\n",
+       "      <td>0.3321</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2862 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Bacterial_genotype    Phage_t experiment_ID experiment_time_h  \\\n",
+       "0                 D516G  C_noPhage          ID_0             OD_0h   \n",
+       "1                 D516G  C_noPhage          ID_1             OD_0h   \n",
+       "2                 D516G  C_noPhage          ID_2             OD_0h   \n",
+       "3                 D516G  C_noPhage          ID_3             OD_0h   \n",
+       "4                 D516G  C_noPhage          ID_4             OD_0h   \n",
+       "...                 ...        ...           ...               ...   \n",
+       "2857                MUT         T7        ID_949            OD_72h   \n",
+       "2858                MUT         T7        ID_950            OD_72h   \n",
+       "2859                MUT         T7        ID_951            OD_72h   \n",
+       "2860                MUT         T7        ID_952            OD_72h   \n",
+       "2861                MUT         T7        ID_953            OD_72h   \n",
+       "\n",
+       "      optical_density  \n",
+       "0              0.1971  \n",
+       "1              0.1593  \n",
+       "2              0.0926  \n",
+       "3              0.1482  \n",
+       "4              0.0978  \n",
+       "...               ...  \n",
+       "2857           0.3179  \n",
+       "2858           0.3601  \n",
+       "2859           0.3709  \n",
+       "2860           0.3628  \n",
+       "2861           0.3321  \n",
+       "\n",
+       "[2862 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# %load _solutions/case3_bacterial_resistance_lab_experiment1.py"
+    "# %load _solutions/case3_bacterial_resistance_lab_experiment1.py\n",
+    "tidy_experiment = main_experiment.melt(id_vars=['Bacterial_genotype', 'Phage_t', 'experiment_ID'],\n",
+    "                                       value_vars=['OD_0h', 'OD_20h', 'OD_72h'],\n",
+    "                                       var_name='experiment_time_h',\n",
+    "                                       value_name='optical_density', )\n",
+    "tidy_experiment"
    ]
   },
   {
@@ -640,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
