--- a/notebooks/python_recap/02-control_flow.ipynb
+++ b/notebooks/python_recap/02-control_flow.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -391,18 +391,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANTEA\n"
+     ]
+    }
+   ],
    "source": [
-    "value = 2"
+    "value = 3\n",
+    "for key, v in dd.items():\n",
+    "    if v == value:\n",
+    "        print(key.upper())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "clear_cell": true,
     "run_control": {
@@ -410,7 +421,15 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANTEA\n"
+     ]
+    }
+   ],
    "source": [
     "# return the name of the company given a certain value between 1 and 5:\n",
     "for k in dd:\n",
@@ -429,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "clear_cell": true,
     "run_control": {
@@ -437,7 +456,15 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "already in dictionary\n"
+     ]
+    }
+   ],
    "source": [
     "if 'antea' in dd.keys():\n",
     "    print('already in dictionary')"
@@ -473,14 +500,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "e\n",
+      "u\n"
+     ]
+    }
+   ],
    "source": [
     "vowels = 'aeiouy'\n",
     "for i in 'powerful':\n",
@@ -490,14 +527,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "how\n",
+      "are\n",
+      "you?\n"
+     ]
+    }
+   ],
    "source": [
     "message = \"Hello how are you?\"\n",
     "message.split() # returns a list\n",
@@ -529,14 +577,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 cool\n",
+      "1 powerful\n",
+      "2 readable\n"
+     ]
+    }
+   ],
    "source": [
     "words = ('cool', 'powerful', 'readable')\n",
     "for i in range(0, len(words)):\n",
@@ -552,14 +610,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 cool\n",
+      "1 powerful\n",
+      "2 readable\n"
+     ]
+    }
+   ],
    "source": [
     "for index, item in enumerate(words):\n",
     "    print(index, item)"
@@ -574,14 +642,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cool t\n",
+      "powerful e\n",
+      "readable a\n"
+     ]
+    }
+   ],
    "source": [
     "tea = 'tea'\n",
     "for word, let in zip(words, tea):\n",
@@ -664,6 +742,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "string = 'hello world! 123'\n",
+    "d = {'DIGITS': 0, \"LETTERS\": 0}\n",
+    "\n",
+    "for s in string:\n",
+    "    if s.isdigit():\n",
+    "        d[\"DIGITS\"] += 1\n",
+    "    if s.isin(['abcdefghijklmnopqrstuvwxyz']):\n",
+    "        d[\"LETTERS\"] += 1\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "clear_cell": true,
     "run_control": {
@@ -709,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -717,14 +816,26 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mZeroDivisionError\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [17]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;241;43m1\u001B[39;49m\u001B[38;5;241;43m/\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\n",
+      "\u001B[0;31mZeroDivisionError\u001B[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
-    "# 1/0 # uncomment this cell"
+    " 1/0 # uncomment this cell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -732,16 +843,28 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "3",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [18]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m## uncomment the following lines in this cell\u001B[39;00m\n\u001B[1;32m      2\u001B[0m d \u001B[38;5;241m=\u001B[39m {\u001B[38;5;241m1\u001B[39m:\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m:\u001B[38;5;241m2\u001B[39m}  \n\u001B[0;32m----> 3\u001B[0m \u001B[43md\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m3\u001B[39;49m\u001B[43m]\u001B[49m\n",
+      "\u001B[0;31mKeyError\u001B[0m: 3"
+     ]
+    }
+   ],
    "source": [
     "## uncomment the following lines in this cell\n",
-    "#d = {1:1, 2:2}  \n",
-    "#d[3]"
+    "d = {1:1, 2:2}\n",
+    "d[3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -749,11 +872,23 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'foobar'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [19]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m## uncomment the following lines in this cell\u001B[39;00m\n\u001B[1;32m      2\u001B[0m l \u001B[38;5;241m=\u001B[39m [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m3\u001B[39m]\n\u001B[0;32m----> 3\u001B[0m \u001B[43ml\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfoobar\u001B[49m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'list' object has no attribute 'foobar'"
+     ]
+    }
+   ],
    "source": [
     "## uncomment the following lines in this cell\n",
-    "#l = [1, 2, 3]\n",
-    "#l.foobar"
+    "l = [1, 2, 3]\n",
+    "l.foobar"
    ]
   },
   {
@@ -772,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -830,14 +965,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not convert data to an integer.\n"
+     ]
+    }
+   ],
    "source": [
     "k = 'f6'\n",
     "import sys\n",
@@ -847,9 +990,20 @@
     "    print(\"Could not convert data to an integer.\")\n",
     "except:\n",
     "    print(\"Unexpected error:\", sys.exc_info()[0])\n",
-    "    raise\n",
-    "    "
+    "    raise"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
