--- a/notebooks/python_recap/03-functions.ipynb
+++ b/notebooks/python_recap/03-functions.ipynb
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -607,29 +607,33 @@
     "        \"\"\"\n",
     "        self.name = name\n",
     "        self.wage = wage\n",
+    "        self.projects = {}\n",
     "        \n",
-    "        self.hours = 0.        \n",
-    "        \n",
-    "    def worked(self, hours):\n",
+    "    def worked(self, hours, project):\n",
     "        \"\"\"add worked hours on a project\n",
     "        \"\"\"\n",
     "        try:\n",
     "            hours = float(hours)\n",
+    "            self.projects[project] += hours\n",
+    "        except KeyError:\n",
+    "            raise Exception('Project does not exist')\n",
     "        except:\n",
     "            raise Exception(\"Hours not convertable to float!\")\n",
-    "            \n",
-    "        self.hours += hours\n",
+    "\n",
+    "\n",
+    "    def new_project(self, project_name):\n",
+    "        self.projects[project_name] = 0\n",
     "        \n",
     "    def calc_earnings(self):\n",
     "        \"\"\"\n",
     "        Calculate earnings\n",
     "        \"\"\"\n",
-    "        return self.hours *self.wage"
+    "        return sum(self.projects.values()) *self.wage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -643,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -652,21 +656,31 @@
    },
    "outputs": [],
    "source": [
-    "bert.worked(10.)\n",
-    "bert.worked(20.)\n",
-    "bert.wage = 80."
+    "bert.new_project('digimeter')\n",
+    "bert.worked(5, 'digimeter')\n",
+    "bert.new_project('mDNA')\n",
+    "bert.worked(20, 'digimeter')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1500.0"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bert.calc_earnings()"
    ]
@@ -859,7 +873,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---------------------------------------"
+    "---------------------------------------\n"
    ]
   }
  ],
